# starting-ragchatbot-codebase

./: CLAUDE.md  backend-tool-refactor.md  frontend-changes.md  pyproject.toml  query-flow-diagram.md  test_changes.py  test_design.html  verify_changes.py
.claude/: settings.local.json
.claude/commands/: implement-feature.md
backend/: ai_generator.py  app.py  rag_system.py  search_tools.py
backend/tests/: __init__.py  conftest.py  test_ai_generator.py  test_api_endpoints.py  test_app_integration.py  test_live_system.py  test_rag_system.py  test_search_tools.py
frontend/: index.html  script.js  style.css
scripts/: format_code.py  quality_check.py
